--- a/Notebooks/Financial Fraud Modeling for LOL Bank.ipynb
+++ b/Notebooks/Financial Fraud Modeling for LOL Bank.ipynb
@@ -4781,63 +4781,63 @@
    "id": "c21b3239",
    "metadata": {},
    "source": [
-    "# 🎯 Fraud Detection System - Executive Summary\n",
+    "# Fraud Detection System - Executive Summary\n",
     "\n",
-    "## 📊 Performance Overview\n",
-    "- **Final Model Accuracy:** 97.23% ✅  \n",
-    "- **Improvement over Default Model:** +0.27% 📈  \n",
-    "- **Global Fraud Rate:** 5.04% of all transactions 💳\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 🔍 Key Business Insights\n",
-    "\n",
-    "### 🎪 High-Risk Categories\n",
-    "- **Clothing Retailers:** 5.20% fraud rate (highest risk) 👕  \n",
-    "- **Groceries & Restaurants:** ~5.19% fraud rate 🛒🍽️  \n",
-    "- **Entertainment:** 4.82% fraud rate (lowest risk) 🎬🎧\n",
-    "\n",
-    "### 👥 Customer Risk Profile\n",
-    "- **Young Adults (18-25):** 5.24% fraud rate (highest risk) 🧑  \n",
-    "- **Seniors (66+):** 4.86% fraud rate (lowest risk) 👵👴  \n",
-    "- **Weekdays vs Weekends:** 5.69% vs 4.91% fraud rate 📅\n",
-    "\n",
-    "### 💳 Device Risk Analysis\n",
-    "- **Dashboard Cards:** 5.59% fraud rate (most risky) 💻  \n",
-    "- **Virtual Cards:** 5.45% fraud rate 🌐  \n",
-    "- **Mobile POS:** Lower risk profile 📱\n",
+    "## Performance Overview\n",
+    "- **Final Model Accuracy:** 97.23%  \n",
+    "- **Improvement over Default Model:** +0.27%  \n",
+    "- **Global Fraud Rate:** 5.04% of all transactions  \n",
     "\n",
     "---\n",
     "\n",
-    "## 🚀 Immediate Actions Recommended\n",
-    "- **Enhanced Monitoring** for clothing retailers & young customers 🔍  \n",
-    "- **Focused Verification** during weekdays and high-risk time windows ⏰  \n",
-    "- **Device-Based Security Tiers** for different risk levels 📱💳  \n",
-    "- **Age-Segmented Authentication Flows** for targeted checks 👥\n",
+    "## Key Business Insights\n",
+    "\n",
+    "### High-Risk Categories\n",
+    "- **Clothing Retailers:** 5.20% fraud rate (highest risk)  \n",
+    "- **Groceries & Restaurants:** ~5.19% fraud rate  \n",
+    "- **Entertainment:** 4.82% fraud rate (lowest risk)  \n",
+    "\n",
+    "### Customer Risk Profile\n",
+    "- **Young Adults (18-25):** 5.24% fraud rate (highest risk)  \n",
+    "- **Seniors (66+):** 4.86% fraud rate (lowest risk)  \n",
+    "- **Weekdays vs Weekends:** 5.69% vs 4.91% fraud rate  \n",
+    "\n",
+    "### Device Risk Analysis\n",
+    "- **Dashboard Cards:** 5.59% fraud rate (most risky)  \n",
+    "- **Virtual Cards:** 5.45% fraud rate  \n",
+    "- **Mobile POS:** Lower risk profile  \n",
     "\n",
     "---\n",
     "\n",
-    "## 📈 Future Roadmap\n",
-    "\n",
-    "### **Phase 1 (3-6 months)**\n",
-    "- Implement **advanced models** (CatBoost, Neural Networks) 🤖  \n",
-    "- **Real-time scoring** for faster detection ⏱️\n",
-    "\n",
-    "### **Phase 2 (6-12 months)**\n",
-    "- Integrate **behavioral biometrics** for stronger security 🖐️  \n",
-    "- Apply **network analysis** to uncover organized fraud 🕸️\n",
-    "\n",
-    "### **Phase 3 (12-18 months)**\n",
-    "- Enable **online learning capabilities** for continuous model updates 🔄  \n",
-    "- Incorporate **Explainable AI** for transparency & stakeholder trust 🧠\n",
+    "## Immediate Actions Recommended\n",
+    "- **Enhanced Monitoring** for clothing retailers and young customers  \n",
+    "- **Focused Verification** during weekdays and high-risk time windows  \n",
+    "- **Device-Based Security Tiers** for different risk levels  \n",
+    "- **Age-Segmented Authentication Flows** for targeted checks  \n",
     "\n",
     "---\n",
     "\n",
-    "## 💰 Business Impact\n",
-    "- **Reduced Losses:** Targeted prevention in high-risk segments 💸  \n",
-    "- **Improved Customer Experience:** Smoother flows for low-risk users 😊  \n",
-    "- **Scalable Solution:** Foundation for ongoing fraud detection improvements 📊  \n",
-    "- **Actionable Insights:** Clear patterns for immediate implementation ✅\n"
+    "## Future Roadmap\n",
+    "\n",
+    "### Phase 1 (3–6 months)\n",
+    "- Implement **advanced models** (CatBoost, Neural Networks)  \n",
+    "- Deploy **real-time scoring** for faster detection  \n",
+    "\n",
+    "### Phase 2 (6–12 months)\n",
+    "- Integrate **behavioral biometrics** for stronger security  \n",
+    "- Apply **network analysis** to uncover organized fraud  \n",
+    "\n",
+    "### Phase 3 (12–18 months)\n",
+    "- Enable **online learning capabilities** for continuous model updates  \n",
+    "- Incorporate **Explainable AI** for transparency and stakeholder trust  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Business Impact\n",
+    "- **Reduced Losses:** Targeted prevention in high-risk segments  \n",
+    "- **Improved Customer Experience:** Streamlined flows for low-risk users  \n",
+    "- **Scalable Solution:** Foundation for ongoing fraud detection improvements  \n",
+    "- **Actionable Insights:** Clear patterns for immediate implementation  \n"
    ]
   }
  ],
